--- a/src/Components/SwiperCard-style.css
+++ b/src/Components/SwiperCard-style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 120px;
-    height: 370px;
+    height: 200px;
     margin: 10px;
     border: 1px solid #ccc;
    
@@ -20,6 +20,7 @@
   .movie-card h2{
     font-size: 18px;
     font-weight: 800;
+    color: blue;
   }
   .movie-card h2{
     padding: 10px 10px 0 10px;
